src/main/java/assess/syntax/AssessQueryParser.java
// $ANTLR 3.5.2 AssessQuery.g 2023-04-13 10:33:13

package assess.syntax;
import assess.AssessQuery;
import java.util.Arrays;
import java.util.HashMap;
import java.util.HashSet;
import assess.AssessQueryBuilder;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class AssessQueryParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "A", "AGAINST", "AGGREGATE", "ASSESS", 
		"B", "BY", "C", "D", "E", "F", "FLOAT", "FOR", "G", "H", "I", "ID", "INT", 
		"J", "K", "L", "LABELS", "M", "N", "O", "P", "PAST", "Q", "R", "S", "SIGN", 
		"T", "U", "USING", "V", "W", "WITH", "WS", "X", "Y", "Z", "'('", "')'", 
		"','", "'.'", "'/'", "':'", "'='", "'['", "'\\''", "']'", "'benchmark.'", 
		"'inf'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int A=4;
	public static final int AGAINST=5;
	public static final int AGGREGATE=6;
	public static final int ASSESS=7;
	public static final int B=8;
	public static final int BY=9;
	public static final int C=10;
	public static final int D=11;
	public static final int E=12;
	public static final int F=13;
	public static final int FLOAT=14;
	public static final int FOR=15;
	public static final int G=16;
	public static final int H=17;
	public static final int I=18;
	public static final int ID=19;
	public static final int INT=20;
	public static final int J=21;
	public static final int K=22;
	public static final int L=23;
	public static final int LABELS=24;
	public static final int M=25;
	public static final int N=26;
	public static final int O=27;
	public static final int P=28;
	public static final int PAST=29;
	public static final int Q=30;
	public static final int R=31;
	public static final int S=32;
	public static final int SIGN=33;
	public static final int T=34;
	public static final int U=35;
	public static final int USING=36;
	public static final int V=37;
	public static final int W=38;
	public static final int WITH=39;
	public static final int WS=40;
	public static final int X=41;
	public static final int Y=42;
	public static final int Z=43;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public AssessQueryParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public AssessQueryParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return AssessQueryParser.tokenNames; }
	@Override public String getGrammarFileName() { return "AssessQuery.g"; }


	   AssessQueryBuilder builder;



	// $ANTLR start "parse"
	// AssessQuery.g:21:1: parse[AssessQueryBuilder builder] returns [AssessQuery parsedQuery] : result= query EOF ;
	public final AssessQuery parse(AssessQueryBuilder builder) throws RecognitionException {
		AssessQuery parsedQuery = null;


		AssessQuery result =null;

		this.builder = builder;
		try {
			// AssessQuery.g:23:5: (result= query EOF )
			// AssessQuery.g:23:7: result= query EOF
			{
			pushFollow(FOLLOW_query_in_parse66);
			result=query();
			state._fsp--;

			match(input,EOF,FOLLOW_EOF_in_parse68); 
			parsedQuery = result;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return parsedQuery;
	}
	// $ANTLR end "parse"



	// $ANTLR start "query"
	// AssessQuery.g:25:1: query returns [AssessQuery query] : WITH targetCube= ID ( FOR predicates= selection_predicates )? BY gammas= group_by_set ASSESS AGGREGATE '(' measurement= ID ')' ( AGAINST parsedBenchmark= benchmark )? ( USING updatedComparisonMethods= comparison_scheme[comparisonMethods] )? LABELS (labelingMethod= ID |labelingSystem= custom_labeling ) ;
	public final AssessQuery query() throws RecognitionException {
		AssessQuery query = null;


		Token targetCube=null;
		Token measurement=null;
		Token labelingMethod=null;
		Token AGGREGATE1=null;
		HashMap<String, String> predicates =null;
		HashSet<String> gammas =null;
		List<String> parsedBenchmark =null;
		List<String> updatedComparisonMethods =null;
		List<List<String>> labelingSystem =null;


		    List<String> comparisonMethods = new ArrayList<String>();
		    
		try {
			// AssessQuery.g:29:5: ( WITH targetCube= ID ( FOR predicates= selection_predicates )? BY gammas= group_by_set ASSESS AGGREGATE '(' measurement= ID ')' ( AGAINST parsedBenchmark= benchmark )? ( USING updatedComparisonMethods= comparison_scheme[comparisonMethods] )? LABELS (labelingMethod= ID |labelingSystem= custom_labeling ) )
			// AssessQuery.g:29:7: WITH targetCube= ID ( FOR predicates= selection_predicates )? BY gammas= group_by_set ASSESS AGGREGATE '(' measurement= ID ')' ( AGAINST parsedBenchmark= benchmark )? ( USING updatedComparisonMethods= comparison_scheme[comparisonMethods] )? LABELS (labelingMethod= ID |labelingSystem= custom_labeling )
			{
			match(input,WITH,FOLLOW_WITH_in_query94); 
			targetCube=(Token)match(input,ID,FOLLOW_ID_in_query100); 
			builder.setTargetCubeName((targetCube!=null?targetCube.getText():null));
			// AssessQuery.g:30:7: ( FOR predicates= selection_predicates )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==FOR) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// AssessQuery.g:30:8: FOR predicates= selection_predicates
					{
					match(input,FOR,FOLLOW_FOR_in_query111); 
					pushFollow(FOLLOW_selection_predicates_in_query117);
					predicates=selection_predicates();
					state._fsp--;

					builder.setSelectionPredicates(predicates);
					}
					break;

			}

			match(input,BY,FOLLOW_BY_in_query129); 
			pushFollow(FOLLOW_group_by_set_in_query135);
			gammas=group_by_set();
			state._fsp--;

			builder.setGroupBySet(gammas);
			match(input,ASSESS,FOLLOW_ASSESS_in_query145); 
			AGGREGATE1=(Token)match(input,AGGREGATE,FOLLOW_AGGREGATE_in_query147); 
			builder.setAggregationFunction((AGGREGATE1!=null?AGGREGATE1.getText():null));
			match(input,44,FOLLOW_44_in_query157); 
			measurement=(Token)match(input,ID,FOLLOW_ID_in_query163); 
			builder.setMeasurement((measurement!=null?measurement.getText():null));
			match(input,45,FOLLOW_45_in_query167); 
			// AssessQuery.g:35:7: ( AGAINST parsedBenchmark= benchmark )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==AGAINST) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// AssessQuery.g:35:8: AGAINST parsedBenchmark= benchmark
					{
					match(input,AGAINST,FOLLOW_AGAINST_in_query177); 
					pushFollow(FOLLOW_benchmark_in_query183);
					parsedBenchmark=benchmark();
					state._fsp--;

					builder.setBenchmarkDetails(parsedBenchmark);
					}
					break;

			}

			// AssessQuery.g:38:7: ( USING updatedComparisonMethods= comparison_scheme[comparisonMethods] )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==USING) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// AssessQuery.g:38:8: USING updatedComparisonMethods= comparison_scheme[comparisonMethods]
					{
					match(input,USING,FOLLOW_USING_in_query203); 
					pushFollow(FOLLOW_comparison_scheme_in_query209);
					updatedComparisonMethods=comparison_scheme(comparisonMethods);
					state._fsp--;

					builder.setDeltaFunctions(updatedComparisonMethods);
					}
					break;

			}

			match(input,LABELS,FOLLOW_LABELS_in_query236); 
			// AssessQuery.g:42:14: (labelingMethod= ID |labelingSystem= custom_labeling )
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==ID) ) {
				alt4=1;
			}
			else if ( (LA4_0==56) ) {
				alt4=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// AssessQuery.g:42:15: labelingMethod= ID
					{
					labelingMethod=(Token)match(input,ID,FOLLOW_ID_in_query243); 
					builder.buildLabelingScheme((labelingMethod!=null?labelingMethod.getText():null));
					}
					break;
				case 2 :
					// AssessQuery.g:44:9: labelingSystem= custom_labeling
					{
					pushFollow(FOLLOW_custom_labeling_in_query265);
					labelingSystem=custom_labeling();
					state._fsp--;

					builder.setLabelingRules(labelingSystem);
					}
					break;

			}

			query = builder.build();
			}

		}
		catch (RecognitionException re) {

			        reportError(re);
			        throw new RuntimeException("Invalid Syntax");
			    
		}

		finally {
			// do for sure before leaving
		}
		return query;
	}
	// $ANTLR end "query"



	// $ANTLR start "selection_predicates"
	// AssessQuery.g:54:1: selection_predicates returns [HashMap<String, String> selectionPredicates] : parsed_predicate= predicate ( ',' additional_predicate= predicate )* ;
	public final HashMap<String, String> selection_predicates() throws RecognitionException {
		HashMap<String, String> selectionPredicates = null;


		ParserRuleReturnScope parsed_predicate =null;
		ParserRuleReturnScope additional_predicate =null;

		selectionPredicates = new HashMap<>();
		try {
			// AssessQuery.g:56:5: (parsed_predicate= predicate ( ',' additional_predicate= predicate )* )
			// AssessQuery.g:56:7: parsed_predicate= predicate ( ',' additional_predicate= predicate )*
			{
			pushFollow(FOLLOW_predicate_in_selection_predicates332);
			parsed_predicate=predicate();
			state._fsp--;

			selectionPredicates.put((parsed_predicate!=null?((AssessQueryParser.predicate_return)parsed_predicate).level:null), (parsed_predicate!=null?((AssessQueryParser.predicate_return)parsed_predicate).value:null));
			// AssessQuery.g:57:5: ( ',' additional_predicate= predicate )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==46) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// AssessQuery.g:57:6: ',' additional_predicate= predicate
					{
					match(input,46,FOLLOW_46_in_selection_predicates341); 
					pushFollow(FOLLOW_predicate_in_selection_predicates347);
					additional_predicate=predicate();
					state._fsp--;

					selectionPredicates.put((additional_predicate!=null?((AssessQueryParser.predicate_return)additional_predicate).level:null), (additional_predicate!=null?((AssessQueryParser.predicate_return)additional_predicate).value:null));
					}
					break;

				default :
					break loop5;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return selectionPredicates;
	}
	// $ANTLR end "selection_predicates"


	public static class predicate_return extends ParserRuleReturnScope {
		public String level;
		public String value;
	};


	// $ANTLR start "predicate"
	// AssessQuery.g:60:1: predicate returns [String level, String value] : level_name= ID '=' '\\'' val= level_value '\\'' ;
	public final AssessQueryParser.predicate_return predicate() throws RecognitionException {
		AssessQueryParser.predicate_return retval = new AssessQueryParser.predicate_return();
		retval.start = input.LT(1);

		Token level_name=null;
		ParserRuleReturnScope val =null;

		try {
			// AssessQuery.g:61:5: (level_name= ID '=' '\\'' val= level_value '\\'' )
			// AssessQuery.g:61:7: level_name= ID '=' '\\'' val= level_value '\\''
			{
			level_name=(Token)match(input,ID,FOLLOW_ID_in_predicate376); 
			retval.level = (level_name!=null?level_name.getText():null);
			match(input,50,FOLLOW_50_in_predicate384); 
			match(input,52,FOLLOW_52_in_predicate386); 
			pushFollow(FOLLOW_level_value_in_predicate392);
			val=level_value();
			state._fsp--;

			retval.value = (val!=null?input.toString(val.start,val.stop):null);
			match(input,52,FOLLOW_52_in_predicate396); 
			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "predicate"


	public static class level_value_return extends ParserRuleReturnScope {
	};


	// $ANTLR start "level_value"
	// AssessQuery.g:65:1: level_value : ( ( ID )+ | date );
	public final AssessQueryParser.level_value_return level_value() throws RecognitionException {
		AssessQueryParser.level_value_return retval = new AssessQueryParser.level_value_return();
		retval.start = input.LT(1);

		try {
			// AssessQuery.g:65:13: ( ( ID )+ | date )
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==ID) ) {
				alt7=1;
			}
			else if ( (LA7_0==INT) ) {
				alt7=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}

			switch (alt7) {
				case 1 :
					// AssessQuery.g:65:15: ( ID )+
					{
					// AssessQuery.g:65:15: ( ID )+
					int cnt6=0;
					loop6:
					while (true) {
						int alt6=2;
						int LA6_0 = input.LA(1);
						if ( (LA6_0==ID) ) {
							alt6=1;
						}

						switch (alt6) {
						case 1 :
							// AssessQuery.g:65:15: ID
							{
							match(input,ID,FOLLOW_ID_in_level_value409); 
							}
							break;

						default :
							if ( cnt6 >= 1 ) break loop6;
							EarlyExitException eee = new EarlyExitException(6, input);
							throw eee;
						}
						cnt6++;
					}

					}
					break;
				case 2 :
					// AssessQuery.g:65:21: date
					{
					pushFollow(FOLLOW_date_in_level_value414);
					date();
					state._fsp--;

					}
					break;

			}
			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "level_value"



	// $ANTLR start "date"
	// AssessQuery.g:67:1: date : ( INT | INT '/' INT | INT '/' INT '/' INT );
	public final void date() throws RecognitionException {
		try {
			// AssessQuery.g:67:6: ( INT | INT '/' INT | INT '/' INT '/' INT )
			int alt8=3;
			int LA8_0 = input.LA(1);
			if ( (LA8_0==INT) ) {
				int LA8_1 = input.LA(2);
				if ( (LA8_1==48) ) {
					int LA8_2 = input.LA(3);
					if ( (LA8_2==INT) ) {
						int LA8_4 = input.LA(4);
						if ( (LA8_4==48) ) {
							alt8=3;
						}
						else if ( (LA8_4==52) ) {
							alt8=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 8, 4, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 8, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}
				else if ( (LA8_1==52) ) {
					alt8=1;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 8, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 8, 0, input);
				throw nvae;
			}

			switch (alt8) {
				case 1 :
					// AssessQuery.g:68:5: INT
					{
					match(input,INT,FOLLOW_INT_in_date427); 
					}
					break;
				case 2 :
					// AssessQuery.g:69:7: INT '/' INT
					{
					match(input,INT,FOLLOW_INT_in_date435); 
					match(input,48,FOLLOW_48_in_date437); 
					match(input,INT,FOLLOW_INT_in_date439); 
					}
					break;
				case 3 :
					// AssessQuery.g:70:7: INT '/' INT '/' INT
					{
					match(input,INT,FOLLOW_INT_in_date447); 
					match(input,48,FOLLOW_48_in_date449); 
					match(input,INT,FOLLOW_INT_in_date451); 
					match(input,48,FOLLOW_48_in_date453); 
					match(input,INT,FOLLOW_INT_in_date455); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "date"



	// $ANTLR start "group_by_set"
	// AssessQuery.g:72:1: group_by_set returns [HashSet<String> groupBySet] : id= ID ( ',' id= ID )* ;
	public final HashSet<String> group_by_set() throws RecognitionException {
		HashSet<String> groupBySet = null;


		Token id=null;

		groupBySet = new HashSet<>();
		try {
			// AssessQuery.g:74:5: (id= ID ( ',' id= ID )* )
			// AssessQuery.g:74:7: id= ID ( ',' id= ID )*
			{
			id=(Token)match(input,ID,FOLLOW_ID_in_group_by_set481); 
			groupBySet.add((id!=null?id.getText():null));
			// AssessQuery.g:74:42: ( ',' id= ID )*
			loop9:
			while (true) {
				int alt9=2;
				int LA9_0 = input.LA(1);
				if ( (LA9_0==46) ) {
					alt9=1;
				}

				switch (alt9) {
				case 1 :
					// AssessQuery.g:74:43: ',' id= ID
					{
					match(input,46,FOLLOW_46_in_group_by_set486); 
					id=(Token)match(input,ID,FOLLOW_ID_in_group_by_set490); 
					}
					break;

				default :
					break loop9;
				}
			}

			groupBySet.add((id!=null?id.getText():null));
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return groupBySet;
	}
	// $ANTLR end "group_by_set"



	// $ANTLR start "benchmark"
	// AssessQuery.g:77:1: benchmark returns [List<String> parsedBenchmark] : ( constant_benchmark | external_benchmark | predicate | PAST INT );
	public final List<String> benchmark() throws RecognitionException {
		List<String> parsedBenchmark = null;


		Token INT5=null;
		ParserRuleReturnScope constant_benchmark2 =null;
		ParserRuleReturnScope external_benchmark3 =null;
		ParserRuleReturnScope predicate4 =null;

		parsedBenchmark = new ArrayList<>();
		try {
			// AssessQuery.g:79:5: ( constant_benchmark | external_benchmark | predicate | PAST INT )
			int alt10=4;
			switch ( input.LA(1) ) {
			case FLOAT:
			case INT:
			case SIGN:
				{
				alt10=1;
				}
				break;
			case ID:
				{
				int LA10_2 = input.LA(2);
				if ( (LA10_2==47) ) {
					alt10=2;
				}
				else if ( (LA10_2==50) ) {
					alt10=3;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 10, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case PAST:
				{
				alt10=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 10, 0, input);
				throw nvae;
			}
			switch (alt10) {
				case 1 :
					// AssessQuery.g:79:7: constant_benchmark
					{
					pushFollow(FOLLOW_constant_benchmark_in_benchmark523);
					constant_benchmark2=constant_benchmark();
					state._fsp--;

					parsedBenchmark.add("Constant");
					    parsedBenchmark.add((constant_benchmark2!=null?input.toString(constant_benchmark2.start,constant_benchmark2.stop):null));
					    
					}
					break;
				case 2 :
					// AssessQuery.g:83:7: external_benchmark
					{
					pushFollow(FOLLOW_external_benchmark_in_benchmark537);
					external_benchmark3=external_benchmark();
					state._fsp--;

					parsedBenchmark.add("External");
					     parsedBenchmark.add((external_benchmark3!=null?((AssessQueryParser.external_benchmark_return)external_benchmark3).cube:null));
					     parsedBenchmark.add((external_benchmark3!=null?((AssessQueryParser.external_benchmark_return)external_benchmark3).measurement:null));
					     
					}
					break;
				case 3 :
					// AssessQuery.g:88:7: predicate
					{
					pushFollow(FOLLOW_predicate_in_benchmark551);
					predicate4=predicate();
					state._fsp--;

					parsedBenchmark.add("Sibling");
					     parsedBenchmark.add((predicate4!=null?((AssessQueryParser.predicate_return)predicate4).level:null));
					     parsedBenchmark.add((predicate4!=null?((AssessQueryParser.predicate_return)predicate4).value:null));
					    
					}
					break;
				case 4 :
					// AssessQuery.g:93:7: PAST INT
					{
					match(input,PAST,FOLLOW_PAST_in_benchmark565); 
					INT5=(Token)match(input,INT,FOLLOW_INT_in_benchmark567); 
					parsedBenchmark.add("Past");
					    parsedBenchmark.add((INT5!=null?INT5.getText():null));
					    
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return parsedBenchmark;
	}
	// $ANTLR end "benchmark"


	public static class constant_benchmark_return extends ParserRuleReturnScope {
	};


	// $ANTLR start "constant_benchmark"
	// AssessQuery.g:99:1: constant_benchmark : ( SIGN )? number= ( INT | FLOAT ) ;
	public final AssessQueryParser.constant_benchmark_return constant_benchmark() throws RecognitionException {
		AssessQueryParser.constant_benchmark_return retval = new AssessQueryParser.constant_benchmark_return();
		retval.start = input.LT(1);

		Token number=null;

		try {
			// AssessQuery.g:99:20: ( ( SIGN )? number= ( INT | FLOAT ) )
			// AssessQuery.g:99:22: ( SIGN )? number= ( INT | FLOAT )
			{
			// AssessQuery.g:99:22: ( SIGN )?
			int alt11=2;
			int LA11_0 = input.LA(1);
			if ( (LA11_0==SIGN) ) {
				alt11=1;
			}
			switch (alt11) {
				case 1 :
					// AssessQuery.g:99:23: SIGN
					{
					match(input,SIGN,FOLLOW_SIGN_in_constant_benchmark587); 
					}
					break;

			}

			number=input.LT(1);
			if ( input.LA(1)==FLOAT||input.LA(1)==INT ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "constant_benchmark"


	public static class external_benchmark_return extends ParserRuleReturnScope {
		public String cube;
		public String measurement;
	};


	// $ANTLR start "external_benchmark"
	// AssessQuery.g:101:1: external_benchmark returns [String cube, String measurement] : benchmarkCube= ID '.' benchmarkMeasurement= ID ;
	public final AssessQueryParser.external_benchmark_return external_benchmark() throws RecognitionException {
		AssessQueryParser.external_benchmark_return retval = new AssessQueryParser.external_benchmark_return();
		retval.start = input.LT(1);

		Token benchmarkCube=null;
		Token benchmarkMeasurement=null;

		try {
			// AssessQuery.g:102:5: (benchmarkCube= ID '.' benchmarkMeasurement= ID )
			// AssessQuery.g:102:7: benchmarkCube= ID '.' benchmarkMeasurement= ID
			{
			benchmarkCube=(Token)match(input,ID,FOLLOW_ID_in_external_benchmark620); 
			retval.cube = (benchmarkCube!=null?benchmarkCube.getText():null);
			match(input,47,FOLLOW_47_in_external_benchmark624); 
			benchmarkMeasurement=(Token)match(input,ID,FOLLOW_ID_in_external_benchmark634); 
			retval.measurement = (benchmarkMeasurement!=null?benchmarkMeasurement.getText():null);
			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "external_benchmark"



	// $ANTLR start "comparison_scheme"
	// AssessQuery.g:105:1: comparison_scheme[List<String> comparisonMethods] returns [List<String> updatedComparisonMethods] : (method_name= ID '(' comparison_scheme[$updatedComparisonMethods] | comparison_args ')' );
	public final List<String> comparison_scheme(List<String> comparisonMethods) throws RecognitionException {
		List<String> updatedComparisonMethods = null;


		Token method_name=null;

		updatedComparisonMethods = comparisonMethods;
		try {
			// AssessQuery.g:107:5: (method_name= ID '(' comparison_scheme[$updatedComparisonMethods] | comparison_args ')' )
			int alt12=2;
			int LA12_0 = input.LA(1);
			if ( (LA12_0==ID) ) {
				int LA12_1 = input.LA(2);
				if ( (LA12_1==46) ) {
					alt12=2;
				}
				else if ( (LA12_1==44) ) {
					alt12=1;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 12, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 12, 0, input);
				throw nvae;
			}

			switch (alt12) {
				case 1 :
					// AssessQuery.g:107:7: method_name= ID '(' comparison_scheme[$updatedComparisonMethods]
					{
					method_name=(Token)match(input,ID,FOLLOW_ID_in_comparison_scheme666); 
					updatedComparisonMethods.add((method_name!=null?method_name.getText():null));
					match(input,44,FOLLOW_44_in_comparison_scheme674); 
					pushFollow(FOLLOW_comparison_scheme_in_comparison_scheme676);
					comparison_scheme(updatedComparisonMethods);
					state._fsp--;

					}
					break;
				case 2 :
					// AssessQuery.g:108:56: comparison_args ')'
					{
					pushFollow(FOLLOW_comparison_args_in_comparison_scheme681);
					comparison_args();
					state._fsp--;

					match(input,45,FOLLOW_45_in_comparison_scheme682); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return updatedComparisonMethods;
	}
	// $ANTLR end "comparison_scheme"


